--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
             android:layout_marginTop="100dp"
             android:layout_gravity="center"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/logo"
+            android:src="@mipmap/logo_index"
             android:layout_marginBottom="32dp" />
 
         <EditText
@@ -52,7 +52,7 @@
             android:layout_marginTop="16dp"
             android:text="Đăng nhập"
             android:layout_gravity="center"
-            android:backgroundTint="@color/pink"/>
+            android:backgroundTint="@color/Dark_Gray"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -78,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:text="Đăng ký ngay!"
                 android:onClick="onRegisterClick"
-                android:textColor="@color/darkblue" />
+                android:textColor="@color/Red" />
 
         </LinearLayout>
         <TextView
