--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,35 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="@color/white"
+    android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="controller.RegisterActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        >
+        android:layout_centerInParent="true">
+
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="32dp"
             android:text="Đăng ký tài khoản"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:textColor="@color/pink"
-            android:layout_gravity="center"
-
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="32dp"/>
-
+            android:textColor="@android:color/black"/>
 
         <EditText
             android:id="@+id/edtUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/titleTextView"
             android:layout_margin="10dp"
             android:background="@drawable/border"
             android:hint="Tên đăng nhập"
@@ -41,7 +39,6 @@
             android:id="@+id/edtMail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/edtUsername"
             android:layout_margin="10dp"
             android:background="@drawable/border"
             android:hint="Email"
@@ -52,16 +49,15 @@
             android:id="@+id/edtPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/edtMail"
             android:layout_margin="10dp"
             android:background="@drawable/border"
             android:hint="Phone"
             android:minHeight="48dp" />
+
         <EditText
             android:id="@+id/edtDOB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/edtPhone"
             android:layout_margin="10dp"
             android:background="@drawable/border"
             android:hint="Birthday"
@@ -72,7 +68,6 @@
             android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/edtPhone"
             android:layout_margin="10dp"
             android:background="@drawable/border"
             android:hint="Mật khẩu"
@@ -83,34 +78,34 @@
             android:id="@+id/btnRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="24dp"
             android:text="Đăng ký"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/pink"
-            android:layout_below="@id/edtPassword"
+            android:backgroundTint="@color/Deep_Sky_Blue"/>
 
-            android:layout_marginTop="24dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center"
             android:gravity="center"
-            android:layout_marginTop="10dp"
-            >
+            android:layout_marginTop="10dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Bạn đã có tài khoản?"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Đăng Nhập"
                 android:layout_marginLeft="5dp"
-                android:textColor="@color/darkblue"
-                android:onClick="onLoginClick"
-                />
+                android:textColor="@android:color/holo_blue_dark"
+                android:onClick="onLoginClick"/>
 
         </LinearLayout>
 
     </LinearLayout>
+
 </RelativeLayout>
