--- a/app/src/main/res/layout/viewholder_hotel.xml
+++ b/app/src/main/res/layout/viewholder_hotel.xml
@@ -2,96 +2,96 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
-
     android:layout_width="300dp"
-
     android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:padding="8dp">
 
-    <ImageView
-        android:id="@+id/imageViewHotel"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:contentDescription="null" />
-
-    <!-- TextView hiển thị tên của khách sạn -->
     <TextView
         android:id="@+id/hotelNameTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textStyle="bold"
         android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@+id/imageViewHotel"
-        app:layout_constraintTop_toTopOf="@+id/imageViewHotel"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Hotel Name" />
+        android:text="Hotel Name"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- TextView hiển thị địa chỉ của khách sạn -->
-
-    <!-- TextView hiển thị điểm đánh giá của khách sạn -->
     <TextView
         android:id="@+id/locationTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:text="Location"
+        android:textColor="@android:color/darker_gray"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageViewHotel"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hotelNameTxt" />
+
+    <ImageView
+        android:id="@+id/imageViewHotel"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="null"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/locationTxt"
+        app:srcCompat="@drawable/pic2" />
 
     <TextView
         android:id="@+id/startTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="212dp"
+        android:layout_marginTop="8dp"
         android:text="0.0"
-        android:textSize="16sp"
+        android:textColor="@android:color/black"
+        android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/locationTxt" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewHotel" />
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/startTxt"
         app:layout_constraintStart_toEndOf="@+id/startTxt"
-        app:srcCompat="@drawable/star2" />
+        app:layout_constraintTop_toTopOf="@+id/startTxt"
+        app:srcCompat="@drawable/star" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
         android:text="Chỉ từ"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.728"
         app:layout_constraintStart_toEndOf="@+id/imageView6"
         app:layout_constraintTop_toTopOf="@+id/imageView6"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/priceTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:text="100$"
+        android:textSize="20dp"
+        android:textColor="@android:color/holo_red_light"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/startTxt" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
