--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="8dp"
-                    android:text="Discover the best places\to go on vacation"
+                    android:text="Bạn muốn đặt phòng? \nThử H2T ngay"
                     android:textColor="@color/white"
                     android:textSize="30sp"
                     android:textStyle="bold" />
@@ -124,24 +124,24 @@
                     </ImageButton>
 
 
-<!--                    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--                        android:layout_width="50dp"-->
-<!--                        android:layout_height="match_parent"-->
-<!--                        android:layout_marginStart="16dp"-->
-<!--                        android:background="@color/pink">-->
+                    <!--                    <androidx.constraintlayout.widget.ConstraintLayout-->
+                    <!--                        android:layout_width="50dp"-->
+                    <!--                        android:layout_height="match_parent"-->
+                    <!--                        android:layout_marginStart="16dp"-->
+                    <!--                        android:background="@color/pink">-->
 
-<!--                        <ImageView-->
-<!--                            android:id="@+id/imgSearch"-->
-<!--                            android:onClick="onSearchHotelClick"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:src="@drawable/search_icon"-->
-<!--                            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                            app:layout_constraintEnd_toEndOf="parent"-->
-<!--                            app:layout_constraintStart_toStartOf="parent"-->
-<!--                            app:layout_constraintTop_toTopOf="parent"-->
-<!--                            app:layout_constraintVertical_bias="0.384" />-->
-<!--                    </androidx.constraintlayout.widget.ConstraintLayout>-->
+                    <!--                        <ImageView-->
+                    <!--                            android:id="@+id/imgSearch"-->
+                    <!--                            android:onClick="onSearchHotelClick"-->
+                    <!--                            android:layout_width="wrap_content"-->
+                    <!--                            android:layout_height="wrap_content"-->
+                    <!--                            android:src="@drawable/search_icon"-->
+                    <!--                            app:layout_constraintBottom_toBottomOf="parent"-->
+                    <!--                            app:layout_constraintEnd_toEndOf="parent"-->
+                    <!--                            app:layout_constraintStart_toStartOf="parent"-->
+                    <!--                            app:layout_constraintTop_toTopOf="parent"-->
+                    <!--                            app:layout_constraintVertical_bias="0.384" />-->
+                    <!--                    </androidx.constraintlayout.widget.ConstraintLayout>-->
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
@@ -182,75 +182,81 @@
                 android:clipToPadding="false"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
-                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/PopularTxt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Popular"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/cat1" />
 
-                <TextView
-                    android:id="@+id/seeallTxt1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="See all"
-                    android:textColor="@color/orange"
-                    android:textSize="16sp" />
-            </LinearLayout>
+            <!--            <LinearLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="match_parent"-->
+            <!--                android:layout_marginStart="8dp"-->
+            <!--                android:layout_marginTop="16dp"-->
+            <!--                android:layout_marginEnd="8dp"-->
+            <!--                android:orientation="horizontal">-->
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerview1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="8dp"
-                android:clipToPadding="false"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp" />
+            <!--                <TextView-->
+            <!--                    android:id="@+id/PopularTxt"-->
+            <!--                    android:layout_width="wrap_content"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:layout_weight="1"-->
+            <!--                    android:text="Popular"-->
+            <!--                    android:textSize="20sp"-->
+            <!--                    android:textStyle="bold" />-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
-                android:orientation="horizontal">
+            <!--                <TextView-->
+            <!--                    android:id="@+id/seeallTxt1"-->
+            <!--                    android:layout_width="wrap_content"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:text="See all"-->
+            <!--                    android:textColor="@color/orange"-->
+            <!--                    android:textSize="16sp" />-->
+            <!--            </LinearLayout>-->
 
-                <TextView
-                    android:id="@+id/categoryTxt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Category"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+            <!--            <androidx.recyclerview.widget.RecyclerView-->
+            <!--                android:id="@+id/recyclerview1"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="match_parent"-->
+            <!--                android:layout_marginTop="8dp"-->
+            <!--                android:clipToPadding="false"-->
+            <!--                android:paddingStart="8dp"-->
+            <!--                android:paddingEnd="8dp" />-->
 
-                <TextView
-                    android:id="@+id/seeallTxt2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="See all"
-                    android:textColor="@color/orange"
-                    android:textSize="16sp" />
-            </LinearLayout>
+            <!--            <LinearLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="match_parent"-->
+            <!--                android:layout_marginStart="8dp"-->
+            <!--                android:layout_marginTop="16dp"-->
+            <!--                android:layout_marginEnd="8dp"-->
+            <!--                android:orientation="horizontal">-->
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerview2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="8dp"
-                android:clipToPadding="false"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp" />
+            <!--                <TextView-->
+            <!--                    android:id="@+id/categoryTxt"-->
+            <!--                    android:layout_width="wrap_content"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:layout_weight="1"-->
+            <!--                    android:text="Category"-->
+            <!--                    android:textSize="20sp"-->
+            <!--                    android:textStyle="bold" />-->
+
+            <!--                <TextView-->
+            <!--                    android:id="@+id/seeallTxt2"-->
+            <!--                    android:layout_width="wrap_content"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:text="See all"-->
+            <!--                    android:textColor="@color/orange"-->
+            <!--                    android:textSize="16sp" />-->
+            <!--            </LinearLayout>-->
+
+            <!--            <androidx.recyclerview.widget.RecyclerView-->
+            <!--                android:id="@+id/recyclerview2"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="match_parent"-->
+            <!--                android:layout_marginTop="8dp"-->
+            <!--                android:clipToPadding="false"-->
+            <!--                android:paddingStart="8dp"-->
+            <!--                android:paddingEnd="8dp" />-->
 
         </LinearLayout>
     </ScrollView>
@@ -323,28 +329,29 @@
                         android:textAlignment="center" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:paddingTop="8dp">
 
-                    <ImageButton
-                        android:id="@+id/forYouImg"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/star" />
+                <!--                <LinearLayout-->
+                <!--                    android:layout_width="0dp"-->
+                <!--                    android:layout_height="match_parent"-->
+                <!--                    android:layout_weight="1"-->
+                <!--                    android:orientation="vertical"-->
+                <!--                    android:paddingTop="8dp">-->
 
-                    <TextView
-                        android:id="@+id/forYouTxt"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="For you"
-                        android:textAlignment="center" />
-                </LinearLayout>
+                <!--                    <ImageButton-->
+                <!--                        android:id="@+id/forYouImg"-->
+                <!--                        android:layout_width="20dp"-->
+                <!--                        android:layout_height="20dp"-->
+                <!--                        android:layout_gravity="center"-->
+                <!--                        android:layout_weight="1"-->
+                <!--                        app:srcCompat="@drawable/star" />-->
+
+                <!--                    <TextView-->
+                <!--                        android:id="@+id/forYouTxt"-->
+                <!--                        android:layout_width="match_parent"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:text="For you"-->
+                <!--                        android:textAlignment="center" />-->
+                <!--                </LinearLayout>-->
 
 
                 <LinearLayout
@@ -363,10 +370,10 @@
                         app:srcCompat="@drawable/bottom_btn3" />
 
                     <TextView
-                        android:id="@+id/favoritesTxt"
+                        android:id="@+id/historyTxt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Favorites"
+                        android:text="History"
                         android:textAlignment="center" />
                 </LinearLayout>
 
